--- a/buy-tix.html
+++ b/buy-tix.html
@@ -23,14 +23,14 @@
 
       <!-- Code Starts Here -->
       <nav class="menu mt4 mh4">
-        <img src="/logo-trace.svg" class="logotype mt0" alt="Landmark Theaters">
+        <img src="/logo-trace.svg" class="logotype" alt="Landmark Theaters">
 
         <!-- Menu -->
         <div class="nav-list">
-          <a href="/#" class="a ph2 pt0 mv2">Locations</a>
-          <a href="/#" class="a ph2 pt0 mv2">Gift Cards</a>
-          <a href="/#" class="a ph2 pt0 mv2">About Us</a>
-          <a href="/#" class="a ph2 pt0 mv2">Social</a>
+          <a href="/#" class="a ph2 pt2">Locations</a>
+          <a href="/#" class="a ph2 pt2">Gift Cards</a>
+          <a href="/#" class="a ph2 pt2">About Us</a>
+          <a href="/#" class="a ph2 pt2">Social</a>
         </div>
 
       </nav>
@@ -47,24 +47,24 @@
 
           <div class="b-container-2">
             <div>
-              <p class="b-cell">Starts</p>
-              <p class="b-cell">Date</p>
-              <p class="b-cell">Where</p>
-              <p class="b-cell">Screen</p>
+              <p class="b-cell f6 m-f5 l-f5">Starts</p>
+              <p class="b-cell f6 m-f5 l-f5">Date</p>
+              <p class="b-cell f6 m-f5 l-f5">Where</p>
+              <p class="b-cell f6 m-f5 l-f5">Screen</p>
             </div>
 
             <div>
-              <p class="b-cell">9:00p</p>
-              <p class="b-cell">03/15/2018</p>
-              <p class="b-cell">Midtown Art Cinema</p>
-              <p class="b-cell">Screen 8</p>
+              <p class="b-cell f6 m-f5 l-f5">9:00p</p>
+              <p class="b-cell f6 m-f5 l-f5">03/15/2018</p>
+              <p class="b-cell f6 m-f5 l-f5">Midtown Art Cinema</p>
+              <p class="b-cell f6 m-f5 l-f5">Screen 8</p>
             </div>
 
           </div>
         </div>
 
-        <div class="form ph5">
-          <p class="f2 mt2 fw6">Select Your Tickets</p>
+        <div class="ph5">
+          <p class="f2-l f3-m mt2 fw6">Select Your Tickets</p>
 
           <div class="b-container-2 mr6">
             <div>
@@ -75,10 +75,10 @@
             </div>
 
             <div>
-              <p class="b-cell-r bb bw1">QTY</p>
-              <p class="b-cell-r">$11.00</p>
-              <p class="b-cell-r">$9.00</p>
-              <p class="b-cell-r">$9.00</p>
+              <p class="b-cell-r bb bw1 ">QTY</p>
+              <p class="b-cell-r ">$11.00</p>
+              <p class="b-cell-r ">$9.00</p>
+              <p class="b-cell-r ">$9.00</p>
             </div>
 
             <div>
@@ -90,23 +90,23 @@
         </div>
       </div>
 
-      <footer class="foot-nav f6">
+      <footer class="foot-nav f6 ">
         <p>Landmark Theaters © 2018</p>
       </footer>
 
     </div>
 
     <!-- Sidebar -->
-    <div class="w3 pa3 overflow-scroll vertical-text box-2">
-      <a href="/coming-soon.html" class="a2">
+    <div class="w3 pa3 overflow-scroll vertical-text box-2 ">
+      <a href="/coming-soon.html " class="a2 ">
     Coming Soon
   </a>
     </div>
 
     <!-- Sidebar 2 -->
 
-    <div class="w3 pa3 ma0 overflow-scroll vertical-text box-3">
-      <a href="/index.html" class="a2">
+    <div class="w3 pa3 ma0 overflow-scroll vertical-text box-3 ">
+      <a href="/index.html " class="a2 ">
       Showtimes
     </a>
     </div>
@@ -115,8 +115,8 @@
 
 
     <!-- Site JavaScript -->
-    <script src="/javascript/toggleClass.js" charset="utf-8"></script>
-    <script src="/javascript/main.js" charset="utf-8"></script>
+    <script src="/javascript/toggleClass.js " charset="utf-8 "></script>
+    <script src="/javascript/main.js " charset="utf-8 "></script>
   </div>
 </body>
 
