--- a/coming-soon.html
+++ b/coming-soon.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="flex vh-100">
-    <!--  Buy Tix  -->
+    <!--  Coming Soon  -->
     <div class="w-95 bg-red pa3 overflow-scroll">
 
       <!-- Code Starts Here -->
@@ -36,9 +36,9 @@
       </nav>
 
       <!-- Coming Soon -->
-      <div id="today" class="film-grid mh5 mt5 mb5">
+      <div id="today" class="mh2 mh3-m mh5-l mt7 mb0 film-grid">
 
-        <div class="mh3 mt4 pv5 pl5 pr3">
+        <div class="ma3 pa3">
           <img src="/images/stalin.jpg">
 
           <p class=" film-title btn-2 ba bw1 pa2 mv2 ">
@@ -54,7 +54,7 @@
           <p class="line ph0 pt3"> Advance Tickets Available At <a href="/buy-tix.html" class="a">Midtown Art Cinema</a></p>
         </div>
 
-        <div class="mh3 mt4 pv5 pr5 pl3">
+        <div class="ma3 pa3">
           <img src="/images/smoon.jpg">
 
           <p class=" film-title btn-2 ba bw1 pa2 mv2 ">
@@ -71,7 +71,7 @@
 
         </div>
 
-        <div class="mh3 mt1 pv2 pl5 pr3">
+        <div class="ma3 pa3">
           <img src="/images/foxtrot.jpg">
 
           <p class=" film-title btn-2 ba bw1 pa2 mv2 ">
@@ -88,7 +88,7 @@
 
         </div>
 
-        <div class="mh3 mt1 pv2 pr5 pl3">
+        <div class="ma3 pa3">
           <img src="/images/garden.jpg">
 
           <p class=" film-title btn-2 ba bw1 pa2 mv2 ">
