--- a/index.html
+++ b/index.html
@@ -44,41 +44,40 @@
 
       <!-- Now Playing -->
       <div class="first week pa3">
-        <p class="big-header ma3"><a href="#T1" class="a">S</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">M</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">T</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">W</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">R</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">F</a></p>
-        <p class="big-header ma3"><a href="#T1" class="a">S</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">S</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">M</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">T</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">W</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">R</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">F</a></p>
+        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">S</a></p>
       </div>
 
       <!-- Showtimes -->
-      <div class="second film-grid mh5 mt7 mb0" id="T1">
+      <div class="mh2 mh3-m mh5-l mt7 mb0 film-grid" id="T1">
 
-        <div class="ma3 pv5 pl5 pr3">
-          <img src="/images/simon.jpg" alt="Love, Simon">
+        <div class="ma3 pa3">
+          <img src="/images/simon.jpg " alt="Love, Simon ">
 
-          <div class="film-title ba bw1 mv2">
-            <a href="/simon-info.html" class="a2">
-              <p class="btn pa2 ma0">Love, Simon
-            </a>
+          <div class="film-title ba bw1 mv2 ">
+            <a href="/simon-info.html " class="a2 ">
+              <p class="btn pa2 ma0 ">Love, Simon</a>
             </p>
           </div>
 
           <p class="mt1 mb4 ">Funny, heartfelt coming-of-age story about a 17-year-old boy who falls for an anonymous classmate online, but has yet to tell his family or friends he’s gay.</p>
 
-          <div class="showtimes-grid mt4">
-            <div class="btn ba bw1 ph2 pv1 mr4"><a href="/buy-tix.html" class="a2">1:25p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4"><a href="/buy-tix.html" class="a2">4:15p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4"><a href="/buy-tix.html" class="a2">7:15p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4"><a href="/buy-tix.html" class="a2">9:35p</a></div>
+          <div class="showtimes-grid mt4 ">
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">1:25p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">4:15p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">7:15p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">9:35p</a></div>
           </div>
         </div>
 
 
-        <div class="ma3 pv5 pr5 pl3 ">
-          <img src="/images/lucy.jpg" alt="Oh, Lucy! ">
+        <div class="ma3 pa3">
+          <img src="/images/lucy.jpg " alt="Oh, Lucy! ">
 
           <p class="film-title btn ba bw1 pa2 mv2 ">Oh, Lucy!</p>
 
@@ -92,8 +91,8 @@
           </div>
         </div>
 
-        <div class="ma2 pl5 pr3 pt2 ">
-          <img src="/images/7days.jpg" alt="7 Days in Entebbe! ">
+        <div class="ma2 pa3">
+          <img src="/images/7days.jpg " alt="7 Days in Entebbe! ">
 
           <p class="film-title btn ba bw1 pa2 mv2 ">7 Days in Entebbe</p>
 
@@ -107,8 +106,8 @@
           </div>
         </div>
 
-        <div class="ma2 pl3 pr5 pt2 ">
-          <img src="/images/thorough.jpg" alt="Thoroughbreds">
+        <div class="ma2 pa3">
+          <img src="/images/thorough.jpg " alt="Thoroughbreds ">
 
           <p class="film-title btn ba bw1 pa2 mv2 ">Thoroughbreds</p>
 
@@ -120,8 +119,8 @@
           </div>
         </div>
 
-        <div class="ma3 pv5 pl5 pr3 ">
-          <img src="/images/wrinkle.jpg" alt="A Wrinkle in Time ">
+        <div class="ma3 pa3">
+          <img src="/images/wrinkle.jpg " alt="A Wrinkle in Time ">
 
           <p class="film-title btn ba bw1 pa2 mv2 ">A Wrinkle in Time</p>
 
@@ -135,8 +134,8 @@
           </div>
         </div>
 
-        <div class="ma3 pv5 pr5 pl3 ">
-          <img src="/images/redsparrow.jpg" alt="Red Sparrow ">
+        <div class="ma3 pa3">
+          <img src="/images/redsparrow.jpg " alt="Red Sparrow ">
 
           <p class="film-title btn ba bw1 pa2 mv2 ">Red Sparrow</p>
 
@@ -151,23 +150,23 @@
         </div>
       </div>
 
-      <footer class="foot-nav f6">
+      <footer class="foot-nav f6 ">
         <p>Landmark Theaters © 2018</p>
       </footer>
 
     </div>
 
     <!-- Buy Tickets -->
-    <div class="w3 pa3 overflow-scroll vertical-text box">
-      <a href="/buy-tix.html" class="a2">
+    <div class="w3 pa3 overflow-scroll vertical-text box ">
+      <a href="/buy-tix.html " class="a2 ">
     Buy Tickets
   </a>
     </div>
 
     <!--  Coming Soon  -->
 
-    <div class="w3 pa3 ma0 overflow-scroll vertical-text box-2">
-      <a href="/coming-soon.html" class="a2">Coming Soon</a>
+    <div class="w3 pa3 ma0 overflow-scroll vertical-text box-2 ">
+      <a href="/coming-soon.html " class="a2 ">Coming Soon</a>
     </div>
   </div>
 
@@ -175,7 +174,7 @@
   <!-- Site JavaScript -->
   <script src="/javascript/toggleClass.js " charset="utf-8 "></script>
   <script src="/javascript/main.js " charset="utf-8 "></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
   </div>
 </body>
 
