--- a/simon-info.html
+++ b/simon-info.html
@@ -40,7 +40,7 @@
         <div>
           <img src="/images/poster-simon.jpg" alt="Love, Simon poster" class="poster">
           <a href="https://www.youtube.com/watch?v=E0cbWdlQg_8" class="a2">
-            <div class="button-2 pa2 tc ba bw1 mr6 mt2"> Trailer </div>
+            <div class="button-2 pa2 tc ba bw1 mr0 mr6-m mr6-l mt2"> Trailer </div>
           </a>
           <p> 1 hrs, 50 mins</p>
           <p class="ma0"><b>Release:</b></p>
