--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- Now Playing -->
       <div class="first week pa3">
-        <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">S</a></p>
+        <p class="big-header ma1 ma2-m ma2-l" id="scroll-thing"><a class="a">S</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">M</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">T</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">W</a></p>
