added button descriptor

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="flex vh-100">
     <!--  Now Playing  -->
-    <div class="w-95 teal-bg pa3 overflow-scroll">
+    <div class="w-95 teal-bg pa3 overflow-x-hidden">
 
       <!-- Code Starts Here -->
       <nav class="menu mt4 mh4">
@@ -39,11 +39,12 @@
       </nav>
 
       <div class="header-home mt7">
+
         <p class="big-header mh0 mv4">Now Playing</p>
       </div>
 
       <!-- Now Playing -->
-      <div class="first week pa3">
+      <div class="first week ph3 pb3 pt0">
         <p class="big-header ma1 ma2-m ma2-l" id="scroll-thing"><a class="a">S</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">M</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">T</a></p>
@@ -52,6 +53,7 @@
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">F</a></p>
         <p class="big-header ma1 ma2-m ma2-l"><a href="#T1" class="a">S</a></p>
       </div>
+      <p class="f6-ns f7 tc mh0 mb0 mt2"><i>select a day above for showtimes</i></p>
 
       <!-- Showtimes -->
       <div class="mh2 mh3-m mh5-l mt7 mb0 film-grid" id="T1">
@@ -68,10 +70,10 @@
           <p class="mt1 mb4 ">Funny, heartfelt coming-of-age story about a 17-year-old boy who falls for an anonymous classmate online, but has yet to tell his family or friends he’s gay.</p>
 
           <div class="showtimes-grid mt4 ">
-            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">1:25p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">4:15p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">7:15p</a></div>
-            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html " class="a2 ">9:35p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html" class="a2 ">1:25p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html" class="a2 ">4:15p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html" class="a2 ">7:15p</a></div>
+            <div class="btn ba bw1 ph2 pv1 mr4 "><a href="/buy-tix.html" class="a2 ">9:35p</a></div>
           </div>
         </div>
 
